<resources>
    <string name="app_name">ThriftBooks</string>
    <string name="message"> Message </string>
    <string name="search"> Search </string>
    <string name="backArrow"> Go Back </string>
    <string name="send"> Send </string>
    <string name="outgoing_message"> Your outgoing message. </string>
    <string name="incoming_message"> Your incoming message. </string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deliveryMessage"> Delivered </string>
    <string name="buyerName"> Name of Buyer </string>
    <string name="lastMessage"> Last Message from Buyer </string>
    <string name="blockMessage"> You can block this person! </string>
    <string name="outgoingMessage"> Your outgoing message here </string>
    <string name="bookTitleThread"> Title of book buyer is interested in</string>
    <string name="signUpFN">Enter your last name</string>
    <string name="SignUpName">Enter your first name</string>
    <string name="bookType"> For Sale</string>
    <string name="bookCondition">Condition of Book</string>
    <string name="bookTitle">Title of Book</string>
    <string name="bookAuthor">Author of Book</string>
    <string name="signUp">Enter Last Name</string>
    <string name="firstName">Enter Your First Name </string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="DOBHint">MM/DD/YYYY</string>
    <string name="usernameFeedback">This is a required field!</string>
    <string name="ageFeedback">Age must be 18 and older</string>
    <string name="hintMessage">Interested in this book!</string>
    <string name="hintEmail">Enter your email</string>
    <string name="moreDetail">Read more </string>
    <string name="timeStamp">time ago</string>
    <string name="hintUsername">Enter Username</string>
    <string name="des">Description</string>
    <string name="logout">Logout</string>
    <string name="back4app_server_url">thriftbooksapp.b4a.io</string>
    <string name="back4app_app_id">igT6i4fRnseJqacXHfylAQuK0wsNWC4saosQ5Vwx</string>
    <string name="back4app_client_key">IGezFO91Gjj9PY5StRJ8oDNC2aYFSa0BJ2wGrNt7</string>
    <string name="channel_name">Messages</string>
    <string name="channel_description">Messages on ThriftBooks</string>
    <string name="fiction">Fiction</string>
    <string name="nonFiction">NonFiction</string>
    <string name="textBook">TextBook</string>
    <string name="plays">Plays</string>
    <string name="folktale">FolkTale</string>
    <string name="genre">Genre</string>
    <string name="price"> Price($) </string>
    <string name="pageCount">Number of Pages</string>
    <string name="facebook_app_id">2299279660241376</string>
    <string name="facebook_client_token">2a80657bdce83171ddc6bb6f9d08d798</string>
    <string name="fb_login_protocol_scheme">fb2299279660241376</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
