<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/message_outgoing.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/msgLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation ="horizontal">

        <ImageView
            android:id="@+id/ivProfileMe"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:visibility="gone"
            android:contentDescription="@string/profile_me"
            app:civ_border_color="@null" />

        <TextView
            android:id="@+id/tvOutGoingMessage"
            android:background="@drawable/style_bubble_outgoing_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="21dp"
            android:layout_toStartOf="@+id/ivProfileMe"
            android:elevation="2dp"
            android:padding="8dp"
            android:text="@string/outgoing_message"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/isSeen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/deliveryMessage"
        android:textAlignment="textEnd" />

</LinearLayout>