<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:id="@+id/cvThreadBuyerView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:contentPadding="3dp">

    <RelativeLayout
        android:id="@+id/rlThreadBuyerItem"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ciProfileImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ciOnlineStatus"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/tvBuyerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/ciProfileImage"
            android:text="@string/buyerName"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBuyerLastMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBuyerName"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/ciProfileImage"
            android:maxLines="2"
            android:text="@string/lastMessage"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/ivBlocking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/blockMessage" />

        <ImageView
            android:id="@+id/seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivBlocking"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
