<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBookTitle"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/ivBook"
            android:padding="3dp"
            android:text="@string/bookAuthor"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/ivBook"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/tvBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/ivBook"
            android:padding="3dp"
            android:text="Book Title"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvAboutVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPublisher"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/ivBook"
            android:padding="3dp"
            android:text="@string/des"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPageCount"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/ivBook"
            android:padding="3dp"
            android:text="Publisher"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvPageCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBookAuthor"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/ivBook"
            android:padding="3dp"
            android:text="Page count"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAboutVolume"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="3dp"
            android:backgroundTint="@color/teal_700"
            android:textSize="11sp"
            android:layout_toStartOf="@+id/tvPublishedDate"
            android:layout_toEndOf="@id/ivBook"
            android:textColor="@color/black"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/tvPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAboutVolume"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="56dp"
            android:padding="3dp"
            android:text="date"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/tvPublishedDate"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
